--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npm i opusscript ytdl-core"
   },
   "dependencies": {
     "discord.js": "^11.3.2"
