--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "aviaosito",
-  "description": "",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "discord.js": "^11.3.2",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.24.0"
   }
 }
